<resources>
    <string name="app_name">Weather</string>
    <string name="home_toolbar_title">Places</string>
    <string name="settings_toolbar_title">Settings</string>
    <string name="seismic_toolbar_title">Seisms</string>
    <string name="about_toolbar_title">About</string>

    <string name="on_boarding_location_description">Allow the application to access your current location in order to provide you better weather forecasts</string>
    <string name="on_boarding_location_button">Allow access to location</string>
    <string name="on_boarding_location_button_disabled">Access to location granted</string>
    <string name="on_boarding_welcome_description">The most accurate forecasts for Portugal</string>
    <string name="on_boarding_welcome_description_secondary">Provided by IPMA</string>
    <string name="on_boarding_skip_button">Skip</string>
    <string name="on_boarding_finish_button">Finish</string>
    <string name="on_boarding_page_indicator_description">Page indicator</string>
    <string name="on_boarding_next_button_description">Next on boarding page</string>
    <string name="on_boarding_location_icon_description">Location image</string>
    <string name="on_boarding_weather_image_description">Weather image</string>

    <string name="today_description">today</string>

    <string name="temperature_rising">Rise</string>
    <string name="temperature_equal">Equal</string>
    <string name="temperature_decrease">Drop</string>

    <string name="weather_image_description">weather icon</string>
    <string name="precipitation_image_description">precipitation percentage</string>
    <string name="wind_strength_image_description">wind strength</string>
    <string name="wind_direction_image_description">wind direction</string>
    <string name="temperature_change_level_description">temperature change</string>
    <string name="current_location_description">current location</string>

    <string name="notification_channel_name">Weather notification</string>
    <string name="notification_channel_description">Weather notifications based on your location</string>
    <string name="notification_content_title">%1$s maximum and %2$s minimum for %3$s</string>

    <string name="settings_weather_notification_preference_title">Show notification</string>
    <string name="settings_weather_notification_preference_description_disabled">Disabled because no valid current location found</string>
    <string name="settings_notification_time_preference_title">Time to receive notification</string>
    <string name="settings_analytics_status_title">Allow anonymous analytics</string>
    <string name="settings_analytics_status_description">Allow the app to recover some anonymous analytics and crash reports</string>

    <string name="about_the_app_title">About the Weather App</string>
    <string name="about_the_app_description">Weather is a free open-source app to follow the latest weather forecasts in Portugal.\n\n All the forecasts information present in this app are from the full responsibility and ownership of IPMA - Instituto Português do Mar e da Atmosfera.\n For more information, please visit https://api.ipma.pt .\n</string>
    <string name="about_contact_us_title">Contact Us</string>
    <string name="about_contact_us_description">Please fell free to send any feedback via Play Store app page https://play.google.com/store/apps/details?id=com.dfl.openipma or send them by email to dfloureiro@protonmail.com .\n</string>
    <string name="about_our_stack_title">Our Stack</string>
    <string name="about_our_stack_description">You can consult all the licensing and the full code base in the GitHub repository at https://github.com/dfloureiro/open-ipma .\n</string>

    <string name="seismic_felt_yes">Yes</string>
    <string name="seismic_felt_no">No</string>
    <string name="seismic_coordinates_label">Coordinates:</string>
    <string name="seismic_felt_label">Felt:</string>

    <string name="error_description">Ups something went wrong</string>
    <string name="error_retry_button">Retry</string>
    <string name="error_image_description">Error image</string>

    <string name="privacy_policy_message">"We need your consent to keep on improving the app. Please allow us to:\n\n- Gather anonymous reports using Firebase Crash Reporting and Crashlytics, this is necessary to fix bugs and crashes.\n\n- Gather anonymous analytics using Google Analytics for Firebase, this is necessary to understand app usage and how can it improve.\n\nFor more information please visit https://firebase.google.com/support/privacy/."</string>
    <string name="privacy_policy_allow_button">Allow</string>
    <string name="privacy_policy_disallow_button">Disallow</string>
</resources>
