<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
            android:key="weather_notification_preference"
            android:title="@string/settings_weather_notification_preference_title"
            android:defaultValue="true"/>

    <ListPreference
            android:key="notification_time_preference"
            android:title="@string/settings_notification_time_preference_title"
            android:defaultValue="8"
            android:entries="@array/hours"
            android:entryValues="@array/hoursAlias"/>

    <SwitchPreference
            android:key="analytics_status"
            android:title="@string/settings_analytics_status_title"
            android:summary="@string/settings_analytics_status_description"
            android:defaultValue="true"/>
</PreferenceScreen>