<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/favourite"
            android:checkable="true"
            android:icon="@drawable/ic_favorite_empty"
            android:title="@string/seismic_toolbar_title"
            android:visible="false"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/seismic"
            android:icon="@drawable/ic_earthquake"
            android:title="@string/seismic_toolbar_title"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/settings"
            android:title="@string/settings_toolbar_title" />
    <item
            android:id="@+id/about"
            android:title="@string/about_toolbar_title" />
</menu>