<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        card_view:cardCornerRadius="5dp"
        tools:backgroundTint="@color/rainy">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

        <androidx.constraintlayout.widget.Barrier
                android:id="@+id/city_horizontal_card_center_barrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="city_card_weather_description,city_card_weather_icon,city_card_min_temp,city_card_max_temp" />

        <ImageView
                android:id="@+id/city_card_weather_icon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:contentDescription="@string/weather_image_description"
                app:layout_constraintBottom_toBottomOf="@+id/city_card_weather_description"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/city_card_day_of_week"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_cloudy" />

        <TextView
                android:id="@+id/city_card_day_of_week"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/today_description"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/city_card_weather_description"
                app:layout_constraintLeft_toRightOf="@+id/city_card_weather_icon"
                app:layout_constraintRight_toLeftOf="@+id/city_card_max_temp"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/city_card_weather_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_text"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@+id/city_card_day_of_week"
                app:layout_constraintRight_toRightOf="@+id/city_card_min_temp"
                app:layout_constraintTop_toBottomOf="@+id/city_card_max_temp"
                tools:text="Partly Cloudy" />

        <TextView
                android:id="@+id/city_card_min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_text"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/city_card_weather_description"
                app:layout_constraintLeft_toRightOf="@+id/city_card_max_temp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="17º" />

        <TextView
                android:id="@+id/city_card_max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:textColor="@android:color/white"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/city_card_weather_description"
                app:layout_constraintLeft_toRightOf="@+id/city_card_day_of_week"
                app:layout_constraintRight_toLeftOf="@+id/city_card_min_temp"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="42º" />

        <ImageView
                android:id="@+id/city_umbrella_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/precipitation_image_description"
                android:src="@drawable/ic_umbrella"
                app:layout_constraintBottom_toTopOf="@+id/city_card_precipitation"
                app:layout_constraintLeft_toLeftOf="@id/city_card_precipitation"
                app:layout_constraintRight_toRightOf="@+id/city_card_precipitation"
                app:layout_constraintTop_toBottomOf="@+id/city_horizontal_card_center_barrier" />

        <TextView
                android:id="@+id/city_card_precipitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/city_card_wind"
                tools:text="100%" />

        <ImageView
                android:id="@+id/city_wind_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/wind_strength_image_description"
                android:src="@drawable/ic_windy"
                app:layout_constraintBottom_toTopOf="@+id/city_card_wind"
                app:layout_constraintLeft_toLeftOf="@id/city_card_wind"
                app:layout_constraintRight_toRightOf="@+id/city_card_wind" />

        <TextView
                android:id="@+id/city_card_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/city_card_precipitation"
                app:layout_constraintRight_toLeftOf="@+id/city_card_wind_direction"
                tools:text="Muito Forte" />

        <ImageView
                android:id="@+id/city_card_wind_direction_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/wind_direction_image_description"
                android:src="@drawable/ic_arrow"
                app:layout_constraintBottom_toTopOf="@+id/city_card_wind_direction"
                app:layout_constraintLeft_toLeftOf="@id/city_card_wind_direction"
                app:layout_constraintRight_toRightOf="@+id/city_card_wind_direction" />

        <TextView
                android:id="@+id/city_card_wind_direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/city_card_wind"
                app:layout_constraintRight_toRightOf="parent"
                tools:text="NE" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>